syntax = "proto3";
package actions;

option go_package = "mafia/pkg/proto/game";

message VoteBanRequest {
  string user_id = 1;
  string target = 2;
  uint32 game = 3;
}

message VoteBanResponse {
}

message ChatRequest {
  string user_id = 1;
  string text = 2;
  uint32 game = 3;
}

message EndRequest {
  string user_id = 1;
  uint32 game = 2;
}

message EndResponse {
}

message CommitRequest {
  string user_id = 1;
  string target = 2;
  uint32 game = 3;
}

message CommitResponse {
  enum Result {
    OK = 0;
    FAIL = 1;
  }
  Result result = 1;
}

message KillResponse {
  string user_id = 1;
}

message PublishRequest {
  string user_id = 1;
  string info = 2;
  uint32 game = 3;
}

message PublishResponse {
}